2004-03-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/index.html: add gentoo link.

2004-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* README: Add note about absolute document links.

	* site/documentation.html: 
	* site/about/index.html: Make documentation links site-absolute: /doc.

	* site/old-news.html: Remove stray modal editor traces and run
	indent-region.

	* site/devel/participating/localization.html:
	* site/devel/misc/etfformat.html: Remove stale wiki links.  Note:
	devel/misc is not linked!

	* site/about/index.html: Add note about current mailing list
	restrictions.  Fix absolute urls.  Tidy, run indent-region.

	* site/devel/participating/index.html: Fix anon CVS location.

	* site/documentation.html: Replace absolute urls with relative
	ones.  This fixes a local or mirror site.

2004-03-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/about/faq.html: title bug.

2004-01-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/older-versions.html: new file for 1.6 and 1.8

2004-01-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/index.html: add separator between linux and others.

2004-01-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/index.html: add Suse 9 / lily 1.8

2003-12-30  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* site/download/index.html: change ftp urls.

2003-10-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: 
	* site/devel/packaging.html:
	* site/download/index.html: Add CVS marker, to stimulate getting
	patches from maintainers.

	* format-page.py (header): Add comment to HTML about generating.

2003-10-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/index.html: add slackware package.

2003-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: 
	* site/index.html: Add Macos X 2.0.1 package.

2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html:
	* site/old-news.html: 
	* site/download/index.html: Run indent-region, html tag fixes.