@@ -9,7 +9,7 @@ You really want to see samples of the output:
 <ul><li>
 
 A few examples are included with the LilyPond distribution <a
-href="/doc/v1.8/input/examples.html">here</a>.
+href="@DOC@v1.8/input/examples.html">here</a>.
 
 <li>
 
