@@ -1,7 +1,7 @@
 <h1>Thank Yous</h1>
 
 Thanks to all <a
-href="/doc/v1.8/Documentation/topdocs/out-www/AUTHORS.html">LilyPond
+href="@DOC@v1.8/Documentation/topdocs/out-www/AUTHORS.html">LilyPond
 hackers</a>, bug-hunters and users. In particular, big thank yous go
 out to
 
