@@ -6,7 +6,7 @@
 <p>
 
 Start learning by browsing the <a
-href="/doc/v2.0/Documentation/user/out-www/lilypond/Tutorial.html">Tutorial</a>
+href="@DOC@v2.0/Documentation/user/out-www/lilypond/Tutorial.html">Tutorial</a>
 
 <p>
 
@@ -21,7 +21,7 @@ Check out the documentation, which should be installed in
 </pre>
 <p>
 If it's not there, browse the documentation <a
-href="/doc/v2.0">on-line</a>.  (For other versions
+href="@DOC@v2.0">on-line</a>.  (For other versions
 than 2.0, go <a href="../documentation.html">here</a>).
 
 <h2>Help!</h2>
