@@ -77,7 +77,7 @@
 	<dd> LilyPond 2.1.30 has editorial fixes for the manual, and
 	  experimental support for page layout in the PostScript
 	  backend.  See the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 	
