@@ -23,7 +23,7 @@
 	  In addition, parts of the manual have been proofread and
 	  corrected in this release.
 	  See the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -31,7 +31,7 @@
 	  account instrument transpositions when quoting other
 	  voices. This release also fixes a number of lyrics related
 	  bugs. See the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -39,7 +39,7 @@
 	  experimental feature for quoting other voices in
 	  instrumental parts. This can be used to produce cue notes.
 	  More information in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -57,14 +57,14 @@
 	  fixes a few bugs caused by the change of <tt>\property</tt>
 	  syntax and has updates in the Program Reference document.
 	  More information in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
         <dt>February 13, 2004</dt><dd> LilyPond 2.1.22 has a
           simplification of the <tt>\property</tt> syntax: it is
           shorter and more consistent now.  More information in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
             notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -73,7 +73,7 @@
           hierarchy.  In addition, it has a bunch of bugfixes,
           improvements in the documentation.  More information in the
 
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
             notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -84,7 +84,7 @@
 	  It also has a large number of bugfixes.
 
 	  More information in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -95,7 +95,7 @@
 	  (functionality moved to <tt>LyricsVoice</tt>)  context.
 
 	  More information in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -103,7 +103,7 @@
 	  release has the new part-combiner installed by default, and a
 	  similar implementation of <tt>autochange</tt>.  More information
 	  in the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -111,7 +111,7 @@
 	  (solo, a due) for the part combiner. It also reinstates the
 	  <tt>--safe</tt> option which prevents havoc by Scheme exploits.  More
 	  information in the
-	  <a 				href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a 				href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 
 	</dd>
@@ -124,7 +124,7 @@
 	  expect more part-combining eye-candy.
 	  More information in
 	  the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -133,7 +133,7 @@
 	  bugs, among others in pedal brackets and finger positioning.
 	  More information in
 	  the
-	  <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	  <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	    notes</a>. Download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -143,7 +143,7 @@
 	    many bugs relating to mixed staff sizes have been fixed.
 	    More information in
 	    the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 	  </dd>
 
@@ -164,7 +164,7 @@
         <dt>January 19, 2004<dt> <dd> LilyPond 2.1.12 fixes many bugs
 	    and improves formatting of ottava brackets.  More information in
 	    the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 	  </dd>
 
@@ -179,14 +179,14 @@
 	    balloon help! (
 	    <a href="../doc/v2.1/input/regression/out-www/collated-files.html#balloon.ly">tadaa!</a>).
 	    More information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 	  </dd>
 
 	<dt>January 16, 2004<dt> <dd> LilyPond 2.1.10 has a load of
 	    bugfixes and a shorter syntax for octave checks. More
 	    information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 
 	  </dd>
@@ -196,7 +196,7 @@
 	    for adding lyrics to melodies. It is now possible to have
 	    different melismatic variations for each stanza.  More
 	    information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 
 	  </dd>
@@ -208,7 +208,7 @@
 	    modified with <tt>\remove</tt> and <tt>\consists</tt> for
 	    individual music expressions.
 	    More information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a>. Download <a href="download/#2.1">here</a>.
 
 	  </dd>
@@ -222,14 +222,14 @@
 	    improve the layout of the Schubert test piece; this release
 	    focuses on dot placement and multi measure rests centering.
 	    More information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	  </dd>
 
 	<dt>January 4, 2004<dt> <dd>  LilyPond 2.1.6 continues to
 	    improve the layout of  lyrics.  More
 	    information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	  </dd>
 
@@ -237,7 +237,7 @@
 	    alignment is completely revamped, and now matches my Edition
 	    Peters version of the Schubert song S&auml;ngers Morgen.  More
 	    information in the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	  </dd>
 
@@ -246,7 +246,7 @@
 	    are now truly different for different staff sizes, thus lending
 	    an engraved look to scores printed in smaller type too. See the
 
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 
 	  </dd>
@@ -256,7 +256,7 @@
 	    file. This allows for Scheme manipulation of music, and could
 	    be used to implement experimental MusicXML output (volunteers
 	    to implement this are welcome!)  See the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -264,14 +264,14 @@
 	    release has a new mechanism for setting font sizes, which
 	    combines different font design sizes and continuous font
 	    scaling. See the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 
 	<dt>December 16, 2003</dt> <dd> LilyPond 2.1.1 released. This
 	    release wraps together all the small fixes made during
 	    Han-Wen's absence. See the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release
 	      notes</a> and download <a href="download/#2.1">here</a>.
 	</dd>
 
@@ -279,7 +279,7 @@
 	<dt>October 11, 2003</dt>
 	  <dd>
 	    LilyPond 2.1.0 released. See the
-	    <a href="/doc/v2.1/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
+	    <a href="@DOC@v2.1/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
 	    download <a href="download/#2.1">here</a>.
 	  </dd>
 	<dt>October 11, 2003</dt>
@@ -315,7 +315,7 @@
 	  <dd> LilyPond 2.0.1 is released. It
 	    contains minor bugfixes.
 	    See the
-	    <a href="/doc/v2.0/Documentation/out-www/ChangeLog.txt">
+	    <a href="@DOC@v2.0/Documentation/out-www/ChangeLog.txt">
 	      ChangeLog</a>
 	    or download <a href="download/#2.0">here</a> directly.
 	  </dd>
@@ -340,21 +340,21 @@
 	<dt>September 24, 2003</dt>
 	  <dd> LilyPond 1.9.10 is released. This is
 	    the final LilyPond 2.0 release candidate. Check
-	    the <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
+	    the <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
 	    download <a href="download/">here</a>.
 	  </dd>
 
 	<dt>September 23, 2003</dt>
 	  <dd>LilyPond 1.9.9 is released. This is
 	    the second LilyPond 2.0 prerelease. Check
-	    the <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
+	    the <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
 	    download <a href="download/">here</a>.
 	  </dd>
 
 	<dt>September 19, 2003</dt>
 	  <dd>LilyPond 1.9.8 is released. This is
 	    the first LilyPond 2.0 prerelease. Check
-	    the <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
+	    the <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">release notes</a> and
 	    download <a href="download/">here</a>.
 	  </dd>
 
@@ -404,7 +404,7 @@
 	  <dd>LilyPond 1.9.3 is released.  This
 	    release supports tagging for music version control, and has better
 	    fingering placement flexibility.  Read the
-	    <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+	    <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">
 	      release notes</a> and get it <a href="download#1.9">here</a>.
 
 	  </dd>
@@ -412,7 +412,7 @@
 	<dt>August 28, 2003</dt>
 	  <dd>
 	    LilyPond 1.9.2 is released. Read the
-	    <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+	    <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">
 	      release notes</a> and get it
 	    <a href="download#1.9">here</a>.
 	  </dd>
@@ -420,7 +420,7 @@
 	<dt>August 26, 2003</dt>
 	  <dd>
 	    LilyPond 1.9.1 is released. Read the
-	    <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+	    <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">
 	      release notes</a> and get it
 	    <a href="download#1.9">here</a>.
 	  </dd>
@@ -428,7 +428,7 @@
 	<dt>August 25, 2003</dt>
 	  <dd>
 	    The  LilyPond 1.9 development release is available. Read the
-	    <a href="/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+	    <a href="@DOC@v1.9/Documentation/topdocs/out-www/NEWS.html">
 	      release notes</a> and get it
 	    <a href="download#1.9">here</a>.
 	  </dd>
@@ -456,7 +456,7 @@
 	<dt>August 7, 2003</dt>
 	  <dd>
 	    LilyPond 1.8 is released.  Read
-	    <a href="/doc/v1.8/Documentation/topdocs/out-www/NEWS.html">the
+	    <a href="@DOC@v1.8/Documentation/topdocs/out-www/NEWS.html">the
 	      release notes</a> and get it <a href="download/">here</a>.
 
 	  </dd>
